# Ticket-System

./: Cargo.toml  README.md  commands.txt
examples/: quick_dev.rs
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
