[package]
name = "rust-axum-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde / Json
serde = { version = "1",  features = ["derive"] }
serde_json = "1"
# Axum
axum = "0.6"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"